--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
 ### IntelliJ IDEA ###
 out/
-!**/src/main/**/out/
-!**/src/test/**/out/
+!/src/main//out/
+!/src/test//out/
+.idea/
+*.iml
+*.ipr
+*.iws
+out/
 
 ### Eclipse ###
 .apt_generated
